--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ body{
     bottom: -4px;
     left: 20px;
  }
+ #mobile{
+   display: none;
+   align-items: center;
+ }
 
 
  /* Home page */
@@ -360,4 +364,29 @@ footer .follow i{
 footer .copyright{
    width: 100%;
    text-align: center;
+}
+
+
+/*     Start Media Query   */
+@media (max-width:799px){
+   #navbar {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      position: fixed;
+      top: 0;
+      right: -300px;
+      height: 100vh;
+      width: 300px;
+      background-color: #e3e6e3;
+      box-shadow: 0 40px 60px rgba(0,0,0,0.1);
+      padding: 80px 0 0 10px;
+
+  }
+  #navbar li{
+      margin-bottom: 25px;
+  }
+   
+
 }
