--- a/style.css
+++ b/style.css
@@ -115,10 +115,10 @@ body{
     bottom: -4px;
     left: 20px;
  }
- #mobile{
+#mobile1{
    display: none;
    align-items: center;
- }
+}
 
 
  /* Home page */
@@ -382,11 +382,22 @@ footer .copyright{
       background-color: #e3e6e3;
       box-shadow: 0 40px 60px rgba(0,0,0,0.1);
       padding: 80px 0 0 10px;
-
-  }
+   }
+  #navbar.active{
+      right: 0px;
+   }
   #navbar li{
       margin-bottom: 25px;
-  }
+   }
+  #mobile1{
+      display: flex;
+      align-items: center;
+   }
+   #mobile1 i{
+      color: #1a1a1a;
+      font-size: 24px;
+      padding-left: 20px;
+   }
    
 
 }
