--- a/style.css
+++ b/style.css
@@ -71,90 +71,94 @@ body{
 
 
  /*     header start    */
- #header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background: #eee;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
- }
- #navbar{
+#header{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 20px 80px;
+   background: #eee;
+   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+   z-index: 999;
+   position: sticky;
+   top: 0;
+   left: 0;
+}
+#navbar{
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
- #navbar li{
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
- }
- #navbar li a{
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #1a1a1a;
-    transition: 0.3 ease;
- }
- #navbar li a:hover,
- #navbar li a.active{
-    color: #088178;
- }
- #navbar li a.active::after,
- #navbar li a:hover::after {
-    content: "";
-    width: 30%;
-    height: 2px;
-    background: #088178;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
- }
-#mobile1{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+#navbar li{
+   list-style: none;
+   padding: 0 20px;
+   position: relative;
+}
+#navbar li a{
+   text-decoration: none;
+   font-size: 16px;
+   font-weight: 600;
+   color: #1a1a1a;
+   transition: 0.3 ease;
+}
+#navbar li a:hover,
+#navbar li a.active{
+   color: #088178;
+}
+#navbar li a.active::after,
+#navbar li a:hover::after {
+   content: "";
+   width: 30%;
+   height: 2px;
+   background: #088178;
+   position: absolute;
+   bottom: -4px;
+   left: 20px;
+}
+
+#mobile{
    display: none;
    align-items: center;
 }
+#close{
+   display: none;
+}
 
 
- /* Home page */
- #hero{
-    background-image: url("img/piconetest.jpg");
-    height: 70vh;
-    width: 100%;
-    background-size: cover;
-    background-position: top 25% right 0;
-    padding: 0 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
- }
- #hero h4{
-    padding-bottom: 15px;
- }
- #hero h1{
-    color: #088178;
- }
- #hero button{
-    background-image: url(/img/piconetest.jpg);/* รูปตรงปุ่มกดหน้า home*/
-    background-color: transparent;
-    color: #088178;
-    border: 0;
-    padding: 14px 80;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 15px;
+/* Home page */
+#hero{
+   background-image: url("img/piconetest.jpg");
+   height: 70vh;
+   width: 100%;
+   background-size: cover;
+   background-position: top 25% right 0;
+   padding: 0 80px;
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   justify-content: center;
+}
+#hero h4{
+   padding-bottom: 15px;
+}
+#hero h1{
+   color: #088178;
+}
+#hero button{
+   background-image: url(/img/piconetest.jpg);/* รูปตรงปุ่มกดหน้า home*/
+   background-color: transparent;
+   color: #088178;
+   border: 0;
+   padding: 14px 80;
+   background-repeat: no-repeat;
+   cursor: pointer;
+   font-weight: 700;
+   font-size: 15px;
 
- }
+}
 
 #product1{
-    text-align: center;
+   text-align: center;
 }
 #product1 .pro-container{
    display: flex;
@@ -163,15 +167,15 @@ body{
    flex-wrap: wrap;
 }
 #product1 .pro{
-    width: 16%;
-    min-width: 250px;
-    padding: 10px 12px;
-    border: 1px solid #cce7d0;
-    border-radius: 25px;
-    cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
-    margin: 15px 0;
-    transition: 0.2s ease;
+   width: 16%;
+   min-width: 250px;
+   padding: 10px 12px;
+   border: 1px solid #cce7d0;
+   border-radius: 25px;
+   cursor: pointer;
+   box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
+   margin: 15px 0;
+   transition: 0.2s ease;
 }
 #product1 .pro:hover{
    box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
@@ -313,13 +317,13 @@ body{
 }
 #banner3 h2{
    color: black;
-   font-size: 50px;
+   font-size: 30px;
    font-weight: 900;
 
 }
 #banner3 h3{
    color: black;
-   font-size: 15px;
+   font-size: 5px;
    font-weight: 800;
 }
 footer{
@@ -370,7 +374,7 @@ footer .copyright{
 /*     Start Media Query   */
 @media (max-width:799px){
    #navbar {
-      display: flex;
+   display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
@@ -380,25 +384,93 @@ footer .copyright{
       height: 100vh;
       width: 300px;
       background-color: #e3e6e3;
-      box-shadow: 0 40px 60px rgba(0,0,0,0.1);
+      box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
       padding: 80px 0 0 10px;
+      transition: 0.3s;
+
+
    }
    #navbar.active{
       right: 0px;
+
    }
-  
-  #navbar li{
+   #navbar li{
       margin-bottom: 25px;
    }
-  #mobile{
+   #mobile{
       display: flex;
       align-items: center;
    }
-   #mobile i{
+   #mobile li{
       color: #1a1a1a;
       font-size: 24px;
       padding-left: 20px;
    }
-   
+   #close{
+      display: initial;
+      position: absolute;
+      top: 30px;
+      left: 30px;
+      color: #222;
+      font-size: 23px;
 
+   }
+   #hero{
+      height: 50vh;
+      padding: 0 80px;
+      background-position: top 30% right 30%;
+   }
+   #product .pro-container{
+      justify-content: center;
+   }
+   #product1 .pro{
+      margin: 15px;
+   }
+   #banner {
+      height: 20vh;  
+  }
+  #sm-banner .banner-box {
+      min-width: 100%;
+      height: 30vh;
+   }
+   #banner3 {
+      padding: 0 80px;
+   }
+   #banner3 .banner-box {
+      width: 28%;
+   }
+}
+@media (max-width: 477px){
+   #header{
+      padding: 10px 20px;
+   }
+   #hero {
+      
+      padding: 0 20px;
+      background-position: 55%;
+   }
+   #product1 .pro{
+      
+      width: 100%;
+   }
+   #product1 .pro-container {
+      
+      justify-content: center;
+      
+  }
+  #banner {
+
+   height: 40vh;
+   }
+   #sm-banner .banner-box {
+      margin-bottom: 20px;
+      height: 60vh;
+  }
+  #banner3{
+      padding: 0 78px;
+  }
+  #banner3 .banner-box{
+   width: 100%;
+   
+  }
 }
