--- a/stylesignup.css
+++ b/stylesignup.css
@@ -122,7 +122,22 @@ input:placeholder-shown + label{
     transform: translateX(400px) translateZ(0);
     transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);;
 }
+
 .open .login-right{
+    transform: translateX(0px) translateZ(0);
+}
+.login-right2{
+    padding: 40px;
+    position: absolute;
+    background-color: #fff;
+    top: 70px;
+    right: 0;
+    width: 400px;
+    transform: translateX(400px) translateZ(0);
+    transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);;
+
+}
+.open .login-right2{
     transform: translateX(0px) translateZ(0);
 }
 .checkbox-container{
