--- a/stylesignup.css
+++ b/stylesignup.css
@@ -8,7 +8,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    height: 100;
+    height: 100%;
 
 }
 
@@ -44,12 +44,13 @@ input:focus{
 }
 label{
     position: absolute;
+    padding-right: 10px;
     top: 0;
     opacity: 1;
     transform: translateY(5px);
     color: #aaa;
     font-weight: 300;
-    font-size: 13px;
+    font-size: 8px;
     letter-spacing: -0.00933333em;
     transition: .2s ease-in-out;
 }
