--- a/stylesignup.css
+++ b/stylesignup.css
@@ -8,7 +8,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    height: 100;
+    height: 100%;
 
 }
 
@@ -44,12 +44,13 @@ input:focus{
 }
 label{
     position: absolute;
+    padding-right: 10px;
     top: 0;
     opacity: 1;
     transform: translateY(5px);
     color: #aaa;
     font-weight: 300;
-    font-size: 13px;
+    font-size: 8px;
     letter-spacing: -0.00933333em;
     transition: .2s ease-in-out;
 }
@@ -122,7 +123,22 @@ input:placeholder-shown + label{
     transform: translateX(400px) translateZ(0);
     transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);;
 }
+
 .open .login-right{
+    transform: translateX(0px) translateZ(0);
+}
+.login-right2{
+    padding: 40px;
+    position: absolute;
+    background-color: #fff;
+    top: 70px;
+    right: 0;
+    width: 400px;
+    transform: translateX(400px) translateZ(0);
+    transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);;
+
+}
+.open .login-right2{
     transform: translateX(0px) translateZ(0);
 }
 .checkbox-container{
