--- a/stylesignup.css
+++ b/stylesignup.css
@@ -74,6 +74,7 @@ input:placeholder-shown + label{
 }
 .h2{
     color: #000;
+    
     font-size: 20px;
     letter-spacing: -0.00933333em;
     font-weight: 600;
@@ -120,6 +121,7 @@ input:placeholder-shown + label{
     top: 0;
     right: 0;
     width: 400px;
+    height: 600px;
     transform: translateX(400px) translateZ(0);
     transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);;
 }
@@ -131,8 +133,9 @@ input:placeholder-shown + label{
     padding: 40px;
     position: absolute;
     background-color: #fff;
-    top: 70px;
+    top: 0;
     right: 0;
+    height: 700px;
     width: 400px;
     transform: translateX(400px) translateZ(0);
     transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);;
@@ -202,6 +205,7 @@ input[type="checkbox"]:checkbox:after{
     font-family: 'Kanit', sans-serif;
     background-color: transparent;
     border: none;
+    margin-top: 30px;
     border-radius: 2px;
     height: 40px;
     display: flex;
@@ -217,4 +221,5 @@ input[type="checkbox"]:checkbox:after{
     color: #fff;
     background:linear-gradient(100deg, #3e5151,#decba4);
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    
 }
