--- a/stylesignup.css
+++ b/stylesignup.css
@@ -223,3 +223,17 @@ input[type="checkbox"]:checkbox:after{
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     
 }
+.btn-secondary{
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+.btn-back{
+    position: absolute;
+    top: 40px;
+    left: 20px;
+    font-size: 20px;
+    color: #aaa;
+    cursor: pointer;
+    transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);
+}
