--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body{
 
 /* Home page */
 #hero{
-   background-image: url("img/piconetest.jpg");
+   background-image: url("/img/piconetest.jpg");
    height: 70vh;
    width: 100%;
    background-size: cover;
@@ -227,7 +227,7 @@ body{
    justify-content: center;
    align-items: center;
    text-align: center;
-   background-image: url(img/backgroundtest.jpg);
+   background-image: url(/img/backgroundtest.jpg);
    width: 100%;
    height: 20vh;
    background-size: cover;
@@ -263,7 +263,7 @@ body{
    justify-content: center;
    align-items: flex-start;
    text-align: center;
-   background-image: url(img/picbackground1.jpg);
+   background-image: url(/img/picbackground1.jpg);
    min-width: 580px;
    height: 40vh;
    background-size: cover;
@@ -273,7 +273,7 @@ body{
 }
 #sm-banner .banner-box2{
    
-   background-image: url(img/picbackground2.jpg);
+   background-image: url(/img/picbackground2.jpg);
    
 }
 #sm-banner h4{
@@ -310,7 +310,7 @@ body{
    justify-content: center;
    align-items: flex-start;
    text-align: center;
-   background-image: url(img/picbackground3.jpg);
+   background-image: url(/img/picbackground3.jpg);
    min-width: 30%;
    height: 30vh;
    background-size: cover;
@@ -320,12 +320,12 @@ body{
 }
 #banner3 .banner-box2{
    
-   background-image: url(img/picbackground4.jpg);
+   background-image: url(/img/picbackground4.jpg);
    
 }
 #banner3 .banner-box3{
    
-   background-image: url(img/picbackground5.jpg);
+   background-image: url(/img/picbackground5.jpg);
    
 }
 #banner3 h2{
@@ -489,7 +489,7 @@ footer .copyright{
 }
 /* shop page */
 #page-header{
-   background-image: url("img/background_page2.jpg");
+   background-image: url("/img/background_page2.jpg");
    width: 100%;
    height: 40vh;
    background-size: cover;
