--- a/css/stylesignup.css
+++ b/css/stylesignup.css
@@ -74,11 +74,16 @@ input:placeholder-shown + label{
 }
 .h2{
     color: #000;
-    
     font-size: 20px;
     letter-spacing: -0.00933333em;
-    font-weight: 600;
+    font-weight: 300;
     padding-bottom: 15px;
+}
+.h3{
+    color: #000;
+    font-size: 10px;
+    padding-left: 230px;
+    
 }
 .login-warpper{
     width: 800px;
@@ -129,6 +134,7 @@ input:placeholder-shown + label{
 .open .login-right{
     transform: translateX(0px) translateZ(0);
 }
+
 .login-right2{
     padding: 40px;
     position: absolute;
