--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,8 @@ body{
    box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
 }
 #product1 .pro img{
-   width: 100%;
+   width: 150px;
+   height: 175px;
    border-radius: 20px;
 }
 #product1 .pro .des{
