--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Kanit', sans-serif;
+
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Kanit', sans-serif;
 }
-h1{
-    font-size: 50px;
-    line-height: 64px;
-    color: #222;
+
+h1 {
+   font-size: 50px;
+   line-height: 64px;
+   color: #222;
 
 }
-h2{
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
-    
+
+h2 {
+   font-size: 46px;
+   line-height: 54px;
+   color: #222;
+
 }
-h4{
-    font-size: 20px;
-    color: #222;
-    
+
+h4 {
+   font-size: 20px;
+   color: #222;
+
 }
-h6{
+
+h6 {
    font-weight: 700;
    font-size: 12px;
-    
+
 }
-p{
-    font-size: 16px;
-    color: #465b46;
-    margin: 15px 0 20px 0;
+
+p {
+   font-size: 16px;
+   color: #465b46;
+   margin: 15px 0 20px 0;
 }
-.section-p1{
-    padding: 40px 80px;
+
+.section-p1 {
+   padding: 40px 80px;
 }
-.section-m1{
-    padding: 40px 0;
+
+.section-m1 {
+   padding: 40px 0;
 }
-button.normal{
+
+button.normal {
    font-size: 14px;
    font-weight: 600;
    padding: 15px 30px;
@@ -51,7 +60,8 @@ button.normal{
    transition: 0.2s;
 
 }
-button.white{
+
+button.white {
    font-size: 13px;
    font-weight: 600;
    padding: 11px 18px;
@@ -63,15 +73,16 @@ button.white{
    transition: 0.2s;
 
 }
-body{
-    width: 100%;
+
+body {
+   width: 100%;
 }
 
 
 
 
- /*     header start    */
-#header{
+/*     header start    */
+#header {
    display: flex;
    align-items: center;
    justify-content: space-between;
@@ -83,28 +94,33 @@ body{
    top: 0;
    left: 0;
 }
-#navbar{
+
+#navbar {
 
    display: flex;
    align-items: center;
    justify-content: center;
 }
-#navbar li{
+
+#navbar li {
    list-style: none;
    padding: 0 20px;
    position: relative;
 }
-#navbar li a{
+
+#navbar li a {
    text-decoration: none;
    font-size: 16px;
    font-weight: 600;
    color: #1a1a1a;
    transition: 0.3 ease;
 }
+
 #navbar li a:hover,
-#navbar li a.active{
+#navbar li a.active {
    color: #088178;
 }
+
 #navbar li a.active::after,
 #navbar li a:hover::after {
    content: "";
@@ -116,17 +132,18 @@ body{
    left: 20px;
 }
 
-#mobile{
+#mobile {
    display: none;
    align-items: center;
 }
-#close{
+
+#close {
    display: none;
 }
 
 
 /* Home page */
-#hero{
+#hero {
    background-image: url("/img/piconetest.jpg");
    height: 70vh;
    width: 100%;
@@ -138,14 +155,17 @@ body{
    align-items: flex-start;
    justify-content: center;
 }
-#hero h4{
+
+#hero h4 {
    padding-bottom: 15px;
 }
-#hero h1{
+
+#hero h1 {
    color: #088178;
 }
-#hero button{
-   
+
+#hero button {
+
    background-color: transparent;
    background-size: 68px;
    color: #088178;
@@ -158,59 +178,69 @@ body{
 
 }
 
-#product1{
+#product1 {
    text-align: center;
 }
-#product1 .pro-container{
+
+#product1 .pro-container {
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
    flex-wrap: wrap;
 }
-#product1 .pro{
+
+#product1 .pro {
    width: 16%;
    min-width: 250px;
    padding: 10px 12px;
    border: 1px solid #cce7d0;
    border-radius: 25px;
    cursor: pointer;
-   box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
+   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
    margin: 15px 0;
    transition: 0.2s ease;
 }
-#product1 .pro:hover{
-   box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
+
+#product1 .pro:hover {
+   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 }
-#product1 .pro img{
+
+#product1 .pro img {
    width: 150px;
    height: 175px;
    border-radius: 20px;
 }
-#product1 .pro .des{
+
+#product1 .pro .des {
    text-align: start;
    padding: 10px 0;
 }
-#product1 .pro .des span{
+
+#product1 .pro .des span {
    color: #606063;
    font-size: 12px;
 
 }
-#product1 .pro h5{
-   padding-top: 7px ;
+
+#product1 .pro h5 {
+   padding-top: 7px;
    color: #1a1a1a;
    font-size: 14px;
 }
-#product1 .pro .des i{
+
+#product1 .pro .des i {
    font-size: 12px;
-   color: rgb(243,228,8);
+   color: rgb(243, 228, 8);
 }
-#product1 .pro .des h4{
+
+#product1 .pro .des h4 {
    padding-top: 7px;
    font-size: 15px;
    font-weight: 700;
    color: #088178;
 }
-#product1 .pro .cart{
+
+#product1 .pro .cart {
    width: 20px;
    height: 20px;
    line-height: 40px;
@@ -222,7 +252,14 @@ body{
 
 
 }
-#banner{
+
+div.productcart {
+   display: flex;
+   justify-content: space-between;
+   padding: 10px 0;
+}
+
+#banner {
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -234,31 +271,36 @@ body{
    background-size: cover;
    background-position: center;
 }
-#banner h4{
+
+#banner h4 {
    color: black;
    font-size: 16px;
 
 }
-#banner h2{
+
+#banner h2 {
    color: black;
    font-size: 40px;
    padding: 10px 0;
 }
-#banner h2 span{
+
+#banner h2 span {
    color: red;
 
 }
-#banner button:hover{
+
+#banner button:hover {
    background: #088178;
    color: #fff;
 }
-#sm-banner{
+
+#sm-banner {
    display: flex;
    justify-content: space-between;
-   
+
 }
 
-#sm-banner .banner-box{
+#sm-banner .banner-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -270,42 +312,49 @@ body{
    background-size: cover;
    background-position: center;
    padding: 16px;
-   
+
 }
-#sm-banner .banner-box2{
-   
+
+#sm-banner .banner-box2 {
+
    background-image: url(/img/picbackground2.jpg);
-   
+
 }
-#sm-banner h4{
+
+#sm-banner h4 {
    color: black;
    font-size: 20px;
    padding: 10px 0;
 
 }
-#sm-banner h2{
+
+#sm-banner h2 {
    color: black;
    font-size: 40px;
    padding: 10px 0;
 
 }
-#sm-banner span{
+
+#sm-banner span {
    color: black;
    font-size: 18px;
    padding: 10px 0;
 
 }
-#sm-banner .banner-box:hover button{
+
+#sm-banner .banner-box:hover button {
    background: #088;
    border: 1px solid #088;
 }
+
 #banner3 {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    padding: 0 80px;
 }
-#banner3 .banner-box{
+
+#banner3 .banner-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -319,76 +368,89 @@ body{
    padding: 20px;
    margin-bottom: 20px;
 }
-#banner3 .banner-box2{
-   
+
+#banner3 .banner-box2 {
+
    background-image: url(/img/picbackground4.jpg);
-   
+
 }
-#banner3 .banner-box3{
-   
+
+#banner3 .banner-box3 {
+
    background-image: url(/img/picbackground5.jpg);
-   
+
 }
-#banner3 h2{
+
+#banner3 h2 {
    color: black;
    font-size: 30px;
    font-weight: 900;
 
 }
-#banner3 h3{
+
+#banner3 h3 {
    color: black;
    font-size: 5px;
    font-weight: 800;
 }
-footer{
+
+footer {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
 }
-footer .col{
+
+footer .col {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 20px;
 
 }
-footer .logo{
-  margin-bottom: 30px; 
+
+footer .logo {
+   margin-bottom: 30px;
 }
-footer h4{
+
+footer h4 {
    font-size: 14px;
    padding-bottom: 20px;
 }
-footer p{
+
+footer p {
    font-size: 13px;
    margin: 0 0 8px 0;
 }
-footer a{
+
+footer a {
    font-size: 13px;
    text-decoration: none;
    color: #222;
    margin-bottom: 10px;
 }
-footer .follow{
+
+footer .follow {
    margin-top: 20px;
 
 }
-footer .follow i{
+
+footer .follow i {
    color: #465b46;
    padding-right: 4px;
    cursor: pointer;
 
 }
-footer .copyright{
+
+footer .copyright {
    width: 100%;
    text-align: center;
 }
 
 
 /*     Start Media Query   */
-@media (max-width:799px){
+@media (max-width:799px) {
    #navbar {
-   display: flex;
+      display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
@@ -404,23 +466,28 @@ footer .copyright{
 
 
    }
-   #navbar.active{
+
+   #navbar.active {
       right: 0px;
 
    }
-   #navbar li{
+
+   #navbar li {
       margin-bottom: 25px;
    }
-   #mobile{
+
+   #mobile {
       display: flex;
       align-items: center;
    }
-   #mobile li{
+
+   #mobile li {
       color: #1a1a1a;
       font-size: 24px;
       padding-left: 20px;
    }
-   #close{
+
+   #close {
       display: initial;
       position: absolute;
       top: 30px;
@@ -429,67 +496,83 @@ footer .copyright{
       font-size: 23px;
 
    }
-   #hero{
+
+   #hero {
       height: 50vh;
       padding: 0 80px;
       background-position: top 30% right 30%;
    }
-   #product .pro-container{
+
+   #product .pro-container {
       justify-content: center;
    }
-   #product1 .pro{
+
+   #product1 .pro {
       margin: 15px;
    }
+
    #banner {
-      height: 20vh;  
-  }
-  #sm-banner .banner-box {
+      height: 20vh;
+   }
+
+   #sm-banner .banner-box {
       min-width: 100%;
       height: 30vh;
    }
+
    #banner3 {
       padding: 0 80px;
    }
+
    #banner3 .banner-box {
       width: 28%;
    }
 }
-@media (max-width: 477px){
-   #header{
+
+@media (max-width: 477px) {
+   #header {
       padding: 10px 20px;
    }
+
    #hero {
-      
+
       padding: 0 20px;
       background-position: 55%;
    }
-   #product1 .pro{
-      
+
+   #product1 .pro {
+
       width: 100%;
    }
-   #product1 .pro-container {
-      
-      justify-content: center;
-      
-  }
-  #banner {
 
-   height: 40vh;
+   #product1 .pro-container {
+
+      justify-content: center;
+
    }
+
+   #banner {
+
+      height: 40vh;
+   }
+
    #sm-banner .banner-box {
       margin-bottom: 20px;
       height: 60vh;
-  }
-  #banner3{
+   }
+
+   #banner3 {
       padding: 0 78px;
-  }
-  #banner3 .banner-box{
-   width: 100%;
-   
-  }
+   }
+
+   #banner3 .banner-box {
+      width: 100%;
+
+   }
 }
+
 /* shop page */
-#page-header{
+#page-header {
    background-image: url("/img/background_page2.jpg");
    width: 100%;
    height: 40vh;
@@ -501,15 +584,18 @@ footer .copyright{
    padding: 14px;
 
 }
+
 #page-header h2,
-#page-header p{
+#page-header p {
    color: #fff;
 }
-#paginaction{
+
+#paginaction {
    text-align: center;
 
 }
-#paginaction a{
+
+#paginaction a {
    text-decoration: none;
    background-color: #088178;
    padding: 15px 20px;
@@ -519,150 +605,180 @@ footer .copyright{
 }
 
 /* single product */
-#prodetails{
+#prodetails {
    display: flex;
    margin-top: 20px;
 }
 
 
 
-#prodetails .single-pro-image{
+#prodetails .single-pro-image {
    width: 40%;
    margin-right: 50px;
 }
-.small-img-group{
+
+.small-img-group {
    display: flex;
    justify-content: space-between;
 }
-#small-img-col{
-   flex: basis 24%; 
+
+#small-img-col {
+   flex: basis 24%;
    cursor: pointer;
 }
-#prodetails .single-pro-details{
+
+#prodetails .single-pro-details {
    width: 50%;
    padding-top: 30px;
 }
-#prodetails .single-pro-details h4{
+
+#prodetails .single-pro-details h4 {
    padding: 40px 0 20px 0;
 }
-#prodetails .single-pro-details h2{
+
+#prodetails .single-pro-details h2 {
    padding: 26px;
 }
-#prodetails .single-pro-details select{
+
+#prodetails .single-pro-details select {
    display: block;
    padding: 5px 10px;
    margin-bottom: 10px;
 }
-#prodetails .single-pro-details input{
+
+#prodetails .single-pro-details input {
    width: 50px;
    height: 47px;
    padding-left: 10px;
    font-size: 16px;
    margin-right: 10px;
 }
-#prodetails .single-pro-details input:focus{
+
+#prodetails .single-pro-details input:focus {
    outline: none;
 }
-#prodetails .single-pro-details button{
+
+#prodetails .single-pro-details button {
    background: #088178;
    color: #fff;
 }
-#prodetails .single-pro-details span{
+
+#prodetails .single-pro-details span {
    line-height: 25px;
 }
+
 /*   cart page   */
-#cart table{
+#cart table {
    width: 100%;
    border-collapse: collapse;
    table-layout: fixed;
    white-space: nowrap;
 
 }
-#cart table img{
+
+#cart table img {
    width: 70px;
 }
-#cart .cancelitemcart{
+
+#cart .cancelitemcart {
    width: 10px;
 }
-#cart table td:nth-child(1){
+
+#cart table td:nth-child(1) {
    width: 100px;
    text-align: center;
 }
-#cart table td:nth-child(2){
+
+#cart table td:nth-child(2) {
    width: 150px;
    text-align: center;
 }
-#cart table td:nth-child(3){
+
+#cart table td:nth-child(3) {
    width: 250px;
    text-align: center;
 }
+
 #cart table td:nth-child(4),
 #cart table td:nth-child(5),
-#cart table td:nth-child(6){
+#cart table td:nth-child(6) {
    width: 150px;
    text-align: center;
 }
-#cart table td:nth-child(5) input{
+
+#cart table td:nth-child(5) input {
    width: 70px;
    padding: 10px 5px 10px 15px;
 }
-#cart table thead{
+
+#cart table thead {
    border: 1px solid #e2e9e1;
    border-left: none;
    border-right: none;
 }
-#cart table thead td{
+
+#cart table thead td {
    font-weight: 700;
    text-transform: uppercase;
    font-size: 13px;
    padding: 18px 0;
 }
-#cart table tbody tr td{
-   padding-top:  15px;
+
+#cart table tbody tr td {
+   padding-top: 15px;
 }
-#cart table tbody td{
+
+#cart table tbody td {
    font-size: 13px;
 }
-#add-cart{
+
+#add-cart {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
 }
-#coupon{
+
+#coupon {
    padding: 100px;
    width: 50%;
    margin-bottom: 50px;
 }
+
 #coupon h3,
-#subtotal h3{
+#subtotal h3 {
    padding-left: 30px;
-   padding-bottom: 15px ;
+   padding-bottom: 15px;
 }
-#coupon input{
+
+#coupon input {
    padding: 10px 20px;
    outline: none;
    width: 40%;
    margin-right: 10px;
    border: 1px solid #e2e9e2;
 }
+
 #coupon button,
-#subtotal button{
+#subtotal button {
    background-color: #088178;
    color: #fff;
    padding: 12px 20px;
 }
-#subtotal{
+
+#subtotal {
    width: 50%;
    margin-bottom: 30px;
    border: 1px solid #e2e9e2;
    padding: 30px;
 }
-#subtotal table{
+
+#subtotal table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 20px;
 }
-#subtotal table td{
+
+#subtotal table td {
    width: 50%;
    border: 1px solid #e2e9e1;
    padding: 10px;
