--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ p {
    margin: 15px 0 20px 0;
 }
 
+
 .section-p1 {
    padding: 40px 80px;
 }
@@ -732,10 +733,11 @@ footer .copyright {
    font-size: 13px;
 }
 
-#add-cart {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;
+#add-cart #subtotal table{
+   width: 100%;
+   border-collapse: collapse;
+   table-layout: fixed;
+   white-space: nowrap;
 }
 
 #coupon {
@@ -749,6 +751,7 @@ footer .copyright {
    padding-left: 30px;
    padding-bottom: 15px;
 }
+
 
 #coupon input {
    padding: 10px 20px;
@@ -766,16 +769,25 @@ footer .copyright {
 }
 
 
+#checkoutbtn{
+   padding: 12px 20px;
+   background-color: green;
+   margin-top: 100px;
+   
+}
 
 #subtotal table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 20px;
+   
 }
 
 #subtotal table td {
    width: 50%;
-   border: 1px solid #e2e9e1;
+   border: 1px solid #0d1a0c;
    padding: 10px;
    font-size: 13px;
 }
+
+
